--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -144,9 +144,8 @@ block content
                                     button#valuationBtn.btn.btn-success.waves-effect.waves-light.m-l-5(data-target='#valuation_modal', data-toggle='modal', type='button', style='display: none;')
                                         i.fa.fa-edit
                                         | 서비스 평가
-                    // start Search Area
                     .row
-                        .col-lg-12
+                        .col-lg-12.m-t-20
                             .card-box
                                 .m-b-30
                                     // Right Sidebar
@@ -183,6 +182,13 @@ block content
                     h4#custom-width-modalLabel.modal-title
                         b 서비스 평가
                 .modal-body
-                    #_service_box
+                    .row
+                        .col-sm-12
+                            .btn-toolbar.m-b-10(role='toolbar')
+                                .pull-right
+                                    button#valuationSaveBtn.btn.btn-sm.btn-primary.waves-effect.waves-light(type='button')
+                                        i.fa.fa-check.m-l-5
+                                        |  저장
+                    #_valuation_box
 
 block footer
