--- a/app/views/search/user_qna.jade
+++ b/app/views/search/user_qna.jade
@@ -102,7 +102,7 @@ block content
                                 thead
                                     tr
                                         th(class='text-center' width='20%') 상위업무명
-                                        th(class='i fa fa-paperclip' width='5%') 
+                                        th(width='3%') 
                                         th(class='text-center') 제목
                                         th(class='text-center' width='15%') 등록일
                                         th(class='text-center' width='10%') 담당자
