--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -116,11 +116,12 @@ block content
                 .row
                     .col-lg-12
                         .card-box
-                            table.table.table-bordered(id='lists')
+                            //table.table.table-bordered(id='lists')
+                            table.table.table-hover(id='lists')
                                 thead
                                     tr
                                         //th(class='text-center' width='16%') 상위업무명
-                                        th(class='text-center' width='16%') 하위업무명
+                                        th(class='text-center' width='18%') 하위업무명
                                         th(class='text-center' id='title') 제목
                                         th(class='text-center' width='15%') 등록일
                                         th(class='text-center' width='15%') 담당자
