--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -237,10 +237,12 @@ block content
                                             td#_content(colspan='3')
                                         tr(style='display:')
                                             th.bg-muted 첨부파일
-                                            td(colspan='3')
+                                            //td(colspan='3')
                                                 i.fa.fa-paperclip.m-r-10
                                                 a(href='#')
                                                     span.text-pink faqimage.gif
+                                            td(colspan='3')
+                                                span#_attach
                                         tr
                                             th.bg-muted 접수상담내용
                                             td(colspan='3')
