--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -121,7 +121,7 @@ block content
                                 thead
                                     tr
                                         //th(class='text-center' width='16%') 상위업무명
-                                        th(class='text-center' width='18%') 하위업무명
+                                        th(class='text-center' width='18%') 하위업무
                                         th(class='text-center' id='title') 제목
                                         th(class='text-center' width='15%') 등록일
                                         th(class='text-center' width='15%') 담당자
