--- a/app/views/search/user_qna.jade
+++ b/app/views/search/user_qna.jade
@@ -101,7 +101,7 @@ block content
                             table.table.table-hover
                                 thead
                                     tr
-                                        th(class='text-center' width='20%') 상위업무명
+                                        th(class='text-center' width='20%') 상위업무
                                         th(width='3%') 
                                         th(class='text-center') 제목
                                         th(class='text-center' width='15%') 등록일
