--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -24,8 +24,8 @@ block head
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 
     // jQuery
-    script(src='/assets/js/jquery.min.js')
-    script(src='/assets/js/bootstrap.min.js')
+    //script(src='/assets/js/jquery.min.js')
+    //script(src='/assets/js/bootstrap.min.js')
     script(src='/assets/js/detect.js')
     script(src='/assets/js/fastclick.js')
     script(src='/assets/js/jquery.slimscroll.js')
