--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -248,8 +248,10 @@ block content
                                             td(colspan='3')
                                                 | 접수하였습니다.
                                                 br
-                                        
-                                h4.m-t-30
+                        .col-sm-12.m-t-20
+                            .card-box
+                                h4
+                                    //h4.m-t-30
                                     b 처리 내용
                                 hr.m-0
                                 table.table.table-bordered.m-t-0
