--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -130,7 +130,7 @@ block content
                             .col-sm-4
                                 .dataTables_info Showing 1 to 15 of 
                                     span(id='totalPage')
-                                    |  entries
+                                    |  pages
                             .col-sm-8
                                 .dataTables_paginate.paging_simple_numbers.pull-right
                                     ul#paging.pagination
