--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -88,6 +88,12 @@ block content
                                                         .col-sm-9
                                                             input.form-control(name='usermanage[jikchk_nm]' type='text' value='#{usermanage.jikchk_nm}')
                                                     .form-group
+                                                            label.col-sm-2.control-label 메일 발송여부
+                                                            .col-sm-9
+                                                                select.form-control(id='email_send_yn' name='usermanage[email_send_yn]' type='text' value='#{usermanage.email_send_yn}')
+                                                                    option(value='Y') 사용 
+                                                                    option(value='N') 사용안함
+                                                    .form-group
                                                         label.col-sm-2.control-label 핸드폰번호
                                                         .col-sm-9
                                                             input.form-control(name='usermanage[hp_telno]' type='text' value='#{usermanage.hp_telno}')
