#KSY 메일전송 수정 완료

--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -328,7 +328,7 @@ block content
                                         label.col-sm-2.control-label 상담내용
                                         .col-sm-10
                                             textarea.form-control(rows='6', name='incident[receipt_content]')
-                                                | 접수하였습니다.
+                                                | 문의하신 내용이 접수되었습니다.
                                     .form-group
                                         label.col-sm-2.control-label 완료예정일
                                         .col-sm-5
