--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -274,10 +274,10 @@ block content
                                         tr
                                             th.bg-muted 지연사유
                                             td#_delay_reason(colspan='3')
-                                        tr
+                                        //tr
                                             th.bg-muted 평가
                                             td#_valuation
-                                            //th.bg-muted 공개여부 / 조회수
+                                            th.bg-muted 공개여부 / 조회수
                                             th.bg-muted 공개여부
                                             td#_complete_open_flag-reading_cnt
                                         tr
