# KSY 더보기 수정 및 메일전송 수정 중

--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -356,6 +356,30 @@ block content
                                         label.col-sm-2.control-label 난이도
                                         .col-sm-5
                                             select.form-control(name='incident[business_level]')
+                                    .form-group(style='display:none;')
+                                        label.col-sm-2.control-label 담당자 이메일
+                                        .col-sm-5
+                                            input.form-control(name='incident[manager_email]')
+                                    .form-group(style='display:none;')
+                                        label.col-sm-2.control-label 담당자 명
+                                        .col-sm-5
+                                            input.form-control(name='incident[manager_nm]')
+                                    .form-group(style='display:none;')
+                                        label.col-sm-2.control-label 담당자 회사명
+                                        .col-sm-5
+                                            input.form-control(name='incident[manager_company_nm]')
+                                    .form-group(style='display:none;')
+                                        label.col-sm-2.control-label 담당자 부서명
+                                        .col-sm-5
+                                            input.form-control(name='incident[manager_dept_nm]')
+                                    .form-group(style='display:none;')
+                                        label.col-sm-2.control-label 담당자 직위명
+                                        .col-sm-5
+                                            input.form-control(name='incident[manager_position]')
+                                    .form-group(style='display:none;')
+                                        label.col-sm-2.control-label 담당자 전화
+                                        .col-sm-5
+                                            input.form-control(name='incident[manager_phone]')
                                     //.form-group
                                         label.col-sm-2.control-label 결재상신여부
                                         .col-sm-3
