#KSY 접수메일 수정

--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -338,10 +338,10 @@ block content
                                                     button.btn.waves-effect.waves-light.btn-primary(type='button')
                                                         i.ion-calendar
                                         .col-sm-2
-                                            select.form-control.fw-80(style='display:inline-block', name='complete_hh')
+                                            select.form-control.fw-80(style='display:inline-block', name='incident[complete_hh]')
                                             span(style='display:inline-block; padding-left:10px;') 시
                                         .col-sm-2
-                                            select.form-control.fw-80(style='display:inline-block', name='complete_mi')
+                                            select.form-control.fw-80(style='display:inline-block', name='incident[complete_mi]')
                                             span(style='display:inline-block; padding-left:10px;') 분
                                     .form-group
                                         label.col-sm-2.control-label 하위업무구분
