#KSY 접수메일 수정

--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -156,7 +156,7 @@ block content
                                     .media
                                         span.pull-right
                                             h4#_request_company_nm-request_nm
-                                            span.pull-right#_request_complete_date
+                                            span.pull-right#_register_date
                                         .media-body
                                             h4.m-t-0.text-primary
                                                 i.md.md-desktop-windows.m-r-10(style='font-size:24px')
@@ -175,6 +175,8 @@ block content
                                         #_attach_box
                                     .col-lg-6
                                         #_attach_img_box
+                                // 접수내용
+                                #_receive_box
                                 // 조치내용
                                 #_complete_box
                                 // 서비스 평가 조치 내용
