--- a/app/views/incident/new_mng.jade
+++ b/app/views/incident/new_mng.jade
@@ -111,6 +111,7 @@ block content
                                     .form-group
                                         label.col-sm-2.control-label 업무구분
                                         .col-sm-4
+                                            input#higher_nm.form-control(type='hidden' name='incident[higher_nm]')
                                             select#higher_cd.form-control(name='incident[higher_cd]')
                                         label.col-sm-2.control-label 요청완료일
                                         .col-sm-4
