--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -245,9 +245,7 @@ block content
                                                 span#_attach
                                         tr
                                             th.bg-muted 접수상담내용
-                                            td(colspan='3')
-                                                | 접수하였습니다.
-                                                br
+                                            td(colspan='3')#_receipt_content
                         .col-sm-12.m-t-20
                             .card-box
                                 h4
