#psw -나의업무처리현황 하위업무 조회

--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -216,7 +216,7 @@ block content
                                                 td#_process_speed
                                         tr
                                             th.bg-muted 상위업무
-                                            td#_higher_nm
+                                            td#_higher_nm 
                                             th.bg-muted 하위업무
                                             td#_lower_nm
                                         tr
@@ -345,11 +345,14 @@ block content
                                         label.col-sm-2.control-label 하위업무구분
                                         .col-sm-5
                                             select.form-control(name='incident[lower_cd]')
-                                                - if (lowerprocess.length > 0) {
-                                                    - for( var i = 0 ; length = lowerprocess.length > i ; i++ ){ 
-                                                        option(value ='#{lowerprocess[i].lower_cd}') #{lowerprocess[i].lower_nm}
+                                                //- if (lowerprocess.length > 0) {
+                                                    - for( var i = 0 ; length = lowerprocess.length > i ; i++ ){
+                                                        - if(lowerprocess[i].higher_cd =="H001"){
+                                                            option(value ='#{lowerprocess[i].lower_cd}')#{lowerprocess[i].lower_nm}
+                                                        - }
+
                                                     - }
-                                                - } 
+                                                //- } 
                                     .form-group
                                         label.col-sm-2.control-label 난이도
                                         .col-sm-5
