#KSY 상담접수(전화) 등록시 요청자반영 저장 컨트롤 추가

--- a/app/views/incident/new_mng.jade
+++ b/app/views/incident/new_mng.jade
@@ -84,7 +84,7 @@ block content
                     .col-lg-12.m-t-10
                         .card-box
                             .p-20
-                                form.form-horizontal.group-border-dashed(id='form' name='form' action='/incident/new' method='post' enctype="multipart/form-data")  
+                                form.form-horizontal.group-border-dashed(id='form' name='form' action='/incident/new_mng' method='post' enctype="multipart/form-data")  
                                     .form-group
                                         label.col-sm-2.control-label 요청자명
                                         .col-sm-4
@@ -98,7 +98,7 @@ block content
                                             input.form-control(type='hidden', name='incident[request_email]')
                                             input.form-control(type='hidden', name='incident[request_hp_telno]')
                                             input.form-control(type='hidden', name='incident[request_office_tel_no]')
-                                            input.form-control(type='hidden', name='incident[request_employee_nm]')
+                                            input.form-control(type='hidden', name='incident[request_nm]')
                                         label.col-sm-2.control-label 긴급구분
                                         .col-sm-2
                                             select.form-control(name='incident[process_speed]')
