--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -116,8 +116,8 @@ block content
                                                     input#datepicker-rcd.form-control(type='text', placeholder='yyyy/mm/dd', name='incident[request_complete_date]')
                                                     span.input-group-addon.bg-primary.b-0.text-white
                                                         i.ion-calendar
-                                        label.col-sm-2.control-label 공개여부
-                                        .col-sm-2
+                                        //label.col-sm-2.control-label 공개여부
+                                        //.col-sm-2
                                             .checkbox.checkbox-primary.checkbox-single.p-t-10
                                                 input#singleCheckbox1(type='checkbox', value='Y', aria-label='Single checkbox One', name='incident[complete_open_flag]')
                                                 label
